# barback-backend

./: .env.example  .gitignore  manage.py  pyproject.toml  pytest.ini  requirements.txt
blog/: admin.py  models.py  serializers.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_post_options_alter_post_meta_description.py  0003_alter_post_options_rename_created_at_post_created_on_and_more.py
core/: asgi.py  settings.py  urls.py  wsgi.py
core/settings/: base.py  dev.py  prod.py
quizzes/: admin.py  enums.py  models.py  serializers.py  urls.py  views.py
quizzes/migrations/: 0001_initial.py  0002_alter_quizsession_filter_method.py
quizzes/services/: generator.py
quizzes/tests/: conftest.py  test_answer.py  test_generator.py  test_history.py  test_question.py  test_results.py  test_start.py
recipes/: admin.py  enums.py  models.py  serializers.py  urls.py  views.py
recipes/migrations/: 0001_initial.py  0002_alter_garnish_recipe.py  0002_alter_recipe_tags.py  0003_remove_garnish_recipe_garnish_recipe.py  0003_remove_recipeingredient_amount.py  0004_remove_garnish_recipe_recipegarnish_recipe_garnishes.py  0004_rename_cateogory_ingredient_category.py  0005_alter_recipegarnish_recipe.py  0005_alter_recipeingredient_recipe.py  0006_alter_recipe_alt_glasses.py  0006_recipegarnish_is_primary.py  0007_alter_recipe_tags.py  0007_rename_garnish_garnishtype.py  0008_rename_garnish_recipegarnish_garnish_type.py  0008_rename_glasstype_vessel_alter_vessel_options_and_more.py  0009_alter_recipe_garnishes.py  (+3 more)
utils/: pagination.py
(+2 files in other folders)
