[project]
name = "barback-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "sti-munene",email = "kinyuamunene.km@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "djangorestframework (>=3.17.1,<4.0.0)",
    "django-filter (>=25.2,<26.0)",
    "pillow (>=12.2.0,<13.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
